[gd_scene load_steps=4 format=3 uid="uid://bxsgj2uk86en1"]

[ext_resource type="Script" path="res://scenes/ShopMenu.gd" id="1_m5sxg"]
[ext_resource type="Theme" uid="uid://b2viljn765xjf" path="res://default_theme.tres" id="2_0lwig"]
[ext_resource type="Texture2D" uid="uid://loi6c1me1rme" path="res://assets/coin.png" id="3_uos7x"]

[node name="ShopMenu" type="CanvasLayer"]
script = ExtResource("1_m5sxg")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -23.5
offset_right = 105.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0lwig")
theme_override_font_sizes/font_size = 96
text = "Shop"
horizontal_alignment = 1

[node name="BuyButtons" type="GridContainer" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="BuyButton1" type="Button" parent="Control/VBoxContainer/BuyButtons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_0lwig")
text = "Buy Upgrade"

[node name="BottomBar" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -51.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/BottomBar"]
layout_mode = 2
alignment = 1

[node name="ExitButton" type="Button" parent="Control/BottomBar/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0lwig")
text = "Exit Shop"

[node name="TopBar" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TopBar"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_uos7x")
stretch_mode = 3

[node name="CoinCount" type="Label" parent="Control/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_0lwig")
theme_override_constants/line_spacing = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/VBoxContainer/BuyButtons/BuyButton1" to="." method="_on_buy_button_1_pressed"]
[connection signal="pressed" from="Control/BottomBar/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
